# torchmortem

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: basic_mlp.py  cnn_overfit.py  healthy_resnet.py  lstm_vanishing.py  transformer_debug.py
src/torchmortem/: __init__.py  core.py  registry.py  types.py
src/torchmortem/collectors/: __init__.py  activation.py  base.py  curvature.py  gradient.py  loss.py  rank.py  weight.py
src/torchmortem/detectors/: __init__.py  base.py  dead_units.py  gradient_flow.py  gradient_noise.py  loss_dynamics.py  rank_collapse.py  saturation.py  update_ratio.py  weight_norm.py
src/torchmortem/interpreters/: __init__.py  base.py  default.py
src/torchmortem/interpreters/rules/: __init__.py  curvature_traps.py  gradient_starvation.py  instability.py  representation.py
src/torchmortem/renderers/: __init__.py  base.py  json_renderer.py
src/torchmortem/renderers/html/: __init__.py  renderer.py
tests/: conftest.py  test_core.py  test_integration.py  test_registry.py  test_types.py
tests/test_collectors/: test_activation.py  test_curvature.py  test_gradient.py  test_loss.py  test_rank.py  test_weight.py
tests/test_detectors/: test_dead_units.py  test_gradient_flow.py  test_gradient_noise.py  test_loss_dynamics.py  test_rank_collapse.py  test_saturation.py  test_update_ratio.py  test_weight_norm.py
tests/test_interpreters/: test_default.py  test_rule_engine.py
tests/test_renderers/: test_html.py  test_json.py
(+1 files in other folders)
