[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "torchmortem"
version = "0.1.1"
description = "Diagnostic autopsy for PyTorch training runs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "torchmortem contributors" }]
keywords = ["pytorch", "training", "diagnostics", "debugging", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "jinja2>=3.1",
    "plotly>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/torchmortem"]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
